Test deployment of both files

--- a/myapp/index.html
+++ b/myapp/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div align="center">
-    <h1>Congratulations Chris, you succeded again!</h1>
+    <h1>Congratulations Chris Rivas, you succeded again!</h1>
     <h2>This application was deployed using AWS CodeDeploy. Chris Rivas automated the code deployment process.</h2>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
